<resources>

    <string name="app_name">Cxem CAR</string>
    <string name="app_name_version">Cxem CAR 1.0</string>
    <string name="menu_settings">Настройки</string>
    
    <string name="title_activity_main">Cxem CAR</string>
    <string name="title_activity_accelerometer">Cxem CAR - Управление акселерометром</string>
    <string name="title_activity_buttons">Cxem CAR - Управление кнопками</string>
    <string name="title_activity_touch">Cxem CAR - Touch управление</string>   
    <string name="title_activity_mcu">Cxem CAR - Настройки контроллера</string>
    <string name="title_activity_about">Cxem CAR - О программе</string>        
    
    <string name="info_text">Наклоните Android устройство вперед или назад для начала движения робота</string>
    
    <string name="btn_accel">Управление от акселерометра</string>
    <string name="btn_button">Управление от кнопок</string>
    <string name="btn_touch">Управление от touch</string>
    <string name="btn_mcu">Настройки контроллера</string>
    <string name="btn_about">О программе</string>
    
    <string name="forward">Вперед</string>
    <string name="backward">Назад</string>
    <string name="left">Влево</string>
    <string name="right">Вправо</string>
    <string name="center">Центр</string>
    	
	<string name="text_about">Последние версии ПО, а также исходные коды вы можете скачать <![CDATA[<a href="http://cxem.net/uprav/uprav43.php">на официальной странице проекта</a>]]></string>
	<string name="mcu_textInfo1">Данные настройки предназначены для микроконтроллера. Параметры передаются и сохраняются в EEPROM памяти МК</string>
	<string name="mcu_textStop">Остановка при потере связи:</string>
	<string name="mcu_cBox_AutoOFF">Вкл.</string>
	<string name="mcu_after_sec">Через (секунд):</string>
	<string name="mcu_flash_Read">Считать данные</string>
	<string name="mcu_flash_Write">Записать данные</string>
	
	<string name="mcu_error_range">Введите корректное значение (0.01 &#8211; 99.9)</string>
	<string name="err_data_entry">Ошибка ввода данных</string>
	<string name="flash_success">Данные в Flash успешно записаны</string>
	<string name="error_get_data">Ошибка получения данных</string>
	
	<string name="default_MAC">00:15:FF:F2:19:5F</string>
    <string name="default_xR">5</string>
    <string name="default_xMax">7</string>
    <string name="default_yMax">5</string>  
    <string name="default_yThreshold">50</string> 
    <string name="default_pwmMax">255</string>
    <string name="default_commandLeft">L</string>
    <string name="default_commandRight">R</string>
    <string name="default_commandHorn">H</string>
    <string name="default_pwmBtnMotorLeft">255</string>
    <string name="default_pwmBtnMotorRight">255</string>
    <string name="default_xRperc">60</string>
	
</resources>